packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_function_definition_with_body.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"fn() 1 end\".chars().collect())"
---
- value:
    Expression:
      Function:
        parameters: []
        body:
          - value:
              Expression:
                Int: 1
            start:
              line: 1
              column: 6
            end:
              line: 1
              column: 7
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 11
