packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_function_definition_with_parameters.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"fn(a, b) end\".chars().collect())"
---
- value:
    Expression:
      Function:
        parameters:
          - value:
              Symbol: a
            start:
              line: 1
              column: 4
            end:
              line: 1
              column: 5
          - value:
              Symbol: b
            start:
              line: 1
              column: 7
            end:
              line: 1
              column: 8
        body: []
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 13
