packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_function_definition_with_table_unpack_parameter.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"fn({ .a, .b }) end\".chars().collect())"
---
- value:
    Expression:
      Function:
        parameters:
          - value:
              TableUnpack:
                elements:
                  - value:
                      Valid:
                        key:
                          value:
                            String:
                              segments:
                                - value:
                                    Valid: a
                                  start:
                                    line: 1
                                    column: 6
                                  end:
                                    line: 1
                                    column: 8
                              arguments: []
                          start:
                            line: 1
                            column: 6
                          end:
                            line: 1
                            column: 8
                        variable:
                          value:
                            Symbol: a
                          start:
                            line: 1
                            column: 6
                          end:
                            line: 1
                            column: 8
                    start:
                      line: 1
                      column: 6
                    end:
                      line: 1
                      column: 8
                  - value:
                      Valid:
                        key:
                          value:
                            String:
                              segments:
                                - value:
                                    Valid: b
                                  start:
                                    line: 1
                                    column: 10
                                  end:
                                    line: 1
                                    column: 12
                              arguments: []
                          start:
                            line: 1
                            column: 10
                          end:
                            line: 1
                            column: 12
                        variable:
                          value:
                            Symbol: b
                          start:
                            line: 1
                            column: 10
                          end:
                            line: 1
                            column: 12
                    start:
                      line: 1
                      column: 10
                    end:
                      line: 1
                      column: 12
            start:
              line: 1
              column: 4
            end:
              line: 1
              column: 14
        body: []
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 19
