packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_index.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"a.b\".chars().collect())"
---
- value:
    Expression:
      BinaryOperator:
        op: Index
        lhs:
          value:
            Symbol: a
          start:
            line: 1
            column: 1
          end:
            line: 1
            column: 2
        rhs:
          value:
            Symbol: b
          start:
            line: 1
            column: 3
          end:
            line: 1
            column: 4
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
