packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_optional_call.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"a?.()\".chars().collect())"
---
- value:
    Expression:
      Call:
        is_optional: true
        lhs:
          value:
            Symbol: a
          start:
            line: 1
            column: 1
          end:
            line: 1
            column: 2
        arguments: []
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 6
