packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_optional_index.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"a?.b\".chars().collect())"
---
- value:
    Expression:
      BinaryOperator:
        op: OptionalIndex
        lhs:
          value:
            Symbol: a
          start:
            line: 1
            column: 1
          end:
            line: 1
            column: 2
        rhs:
          value:
            String:
              segments:
                - value:
                    Valid: b
                  start:
                    line: 1
                    column: 4
                  end:
                    line: 1
                    column: 5
              arguments: []
          start:
            line: 1
            column: 4
          end:
            line: 1
            column: 5
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 4
